            - Now supports ban constraints whose class constructors require
              additional arguments.  These additional arguments are passed to
              the TreeEnumeration/TautEnumeration/TreeSingleSoln constructor.
        Struct TightEncodable<T>:
            - New base class for classes that support tight encodings
              and decodings.
        Class Triangulation<dim>:
            - New suite of routines countBoundaryFaces().
            - New suite of public routines dualBoundaryMap() (these were
              previously private, and had a more complex interface).
            - New suite of routines dualToPrimal().
            - New routine pairing().
            - New routines for tight encodings and decodings.
            - New routine translate().
            - The join() routine now checks all its preconditions, and
              throws an exception if any precondition fails.
        Class Triangulation<3>:
            - New routines isHandlebody() and knowsHandlebody(), thanks to
              Alex He.
            - The Turaev-Viro routines now reserve the right to use a
              different algorithm if your chosen algorithm does not
              support the given parameters (r, parity).  Currently this
              only happens if you ask for ALG_TREEWIDTH and your value
              of r is so large that it cannot fit into a native C++ int.
            - New routines minimiseVertices() and hasMinimalVertices().
            - New routine hasMimimalBoundary().
            - Routine minimiseBoundary() now throws an exception if the
              triangulation is not valid.
            - Routine intelligentSimplify() now explicitly aims to reduce
              the number of vertices, as long as this does not increase
              the number of tetrahedra.
            - New routines longitudeCuts() and meridian().
            - Routines longitude() and meridianLongitude() now throw